err/mobi.devices.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Beaker-1.9.0.egg-info'...
Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/beaker'...
Listing './lib/python3.5/site-packages/beaker/crypto'...
Listing './lib/python3.5/site-packages/beaker/ext'...
Listing './lib/python3.5/site-packages/mobi'...
Listing './lib/python3.5/site-packages/mobi/devices'...
Listing './lib/python3.5/site-packages/mobi/devices/data'...
Listing './lib/python3.5/site-packages/mobi/devices/data/Infrae'...
Listing './lib/python3.5/site-packages/mobi/devices/data/MIT'...
Listing './lib/python3.5/site-packages/mobi/devices/data/WURFL'...
Listing './lib/python3.5/site-packages/mobi/devices/index'...
Compiling './lib/python3.5/site-packages/mobi/devices/index/radixtree.py'...
***   File "./lib/python3.5/site-packages/mobi/devices/index/radixtree.py", line 51
    print "%s|" % (" " * (indent))
              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/mobi/devices/index/tcdbm.py'...
***   File "./lib/python3.5/site-packages/mobi/devices/index/tcdbm.py", line 17
    def open(filename, flag='r', mode=0666):
                                         ^
SyntaxError: invalid token

Listing './lib/python3.5/site-packages/mobi/devices/tests'...
Listing './lib/python3.5/site-packages/mobi/devices/wsgi'...
Compiling './lib/python3.5/site-packages/mobi/devices/wsgi/devicedetection.py'...
***   File "./lib/python3.5/site-packages/mobi/devices/wsgi/devicedetection.py", line 31
    except (Exception,), e:
                       ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/mobi/devices/wurfl'...
Listing './lib/python3.5/site-packages/mobi/interfaces'...
Listing './lib/python3.5/site-packages/mobi.devices-1.2.egg-info'...
Listing './lib/python3.5/site-packages/mobi.interfaces-1.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/zope'...
Listing './lib/python3.5/site-packages/zope/event'...
Listing './lib/python3.5/site-packages/zope/interface'...
Listing './lib/python3.5/site-packages/zope/interface/common'...
Listing './lib/python3.5/site-packages/zope/interface/common/tests'...
Listing './lib/python3.5/site-packages/zope/interface/tests'...
Listing './lib/python3.5/site-packages/zope/schema'...
Listing './lib/python3.5/site-packages/zope/schema/tests'...
Listing './lib/python3.5/site-packages/zope.event-4.3.0.dist-info'...
Listing './lib/python3.5/site-packages/zope.interface-4.4.3.dist-info'...
Listing './lib/python3.5/site-packages/zope.schema-4.5.0.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
